syntax = "proto3";
package grpc;

service FPL {
  rpc getNumberOfPlayers (NumPlayerRequest) returns (NumPlayers) {}
  rpc getParticipantsInLeague (LeagueCode) returns (numParticipants) {}
  rpc getDataForGameweek(GameweekReq) returns (PlayerOccuranceData) {}
  rpc getDataForAllGameweeks(LeagueCode) returns (stream AllGameweekData) {}
}

message NumPlayerRequest {
}

message NumPlayers {
  int64 numPlayers = 1;
}

message LeagueCode {
  int64 LeagueCode = 1;
}

message numParticipants {
  int64 numParticipants = 1;
}

message GameweekReq {
  int64 LeagueCode = 1;
  int64 Gameweek = 2;
}

message PlayerOccuranceData {
  map<string, int32> playerOccurance = 1;
}

message AllGameweekData {
  bytes data = 1;
}
